fix z-index in header

--- a/app/styles/header.less
+++ b/app/styles/header.less
@@ -1,14 +1,5 @@
 .header {
-  z-index: 999;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 45px;
-  background-image: url('/images/pattern-dot-dark-red.png');
-  background-color: @red;
-  border-bottom: 1px solid @dark-red;
-
+  @import './header/nav';
   @import './header/toggle';
   @import './header/menu';
   @import './header/contact';
