--- a/app/styles/header/contact.less
+++ b/app/styles/header/contact.less
@@ -2,7 +2,7 @@
 
 .contact {
   a {
-    z-index: 1002;
+    z-index: 1000;
     text-decoration: none;
     color: @grey;
     position: fixed;
